unpackaged/config/npc/objects/BudgetCategory/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>End of the window during which this category is valid; periods outside the range are excluded.</description>
    <inlineHelpText>Date this category stops being active. Amounts in periods after this date are locked as not available.</inlineHelpText>
</CustomField>