unpackaged/config/npc/objects/BudgetCategory/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
    <description>SLDS icon name shown on the category row (e.g. utility:people). Utility icons render in the brand color.</description>
    <inlineHelpText>SLDS icon shown beside this category in the grid, in group:name format (e.g. utility:moneybag). Leave blank for the default icon.</inlineHelpText>
</CustomField>