unpackaged/config/npc/objects/BudgetCategory/fields/Line_Item_Mode__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Item Mode</label>
    <type>Checkbox</type>
    <description>When true, this category shows its individual budget line items (multiple BudgetCategoryValue records). When false, it shows a single aggregated row per period.</description>
    <inlineHelpText>Show this category as individual line items instead of one aggregated row.</inlineHelpText>
</CustomField>