unpackaged/config/npc/objects/BudgetCategory/fields/Maximum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Funding_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Advisory cap on the category's total across all periods. The Universal Budget grid surfaces a violation when the category total exceeds this amount; saving is never blocked. 0 means no limit.</description>
    <inlineHelpText>Maximum total this category may reach across all periods. The grid flags the category when it is over. Leave 0 for no limit.</inlineHelpText>
</CustomField>