unpackaged/config/npc/objects/BudgetCategory/fields/Maximum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Percentage__c</fullName>
    <inlineHelpText>Enter the maximum percentage of the total submitted budget that may be allocated to this category. If the combined line items in this category exceed this percentage at submission, the applicant will be required to revise their budget before submitting.</inlineHelpText>
    <label>Maximum Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Advisory cap on the category's share of the total budgeted amount, as a percentage. The Universal Budget grid surfaces a violation when exceeded; saving is never blocked. 0 means no limit.</description>
</CustomField>