unpackaged/config/npc/objects/BudgetCategory/fields/Minimum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Funding_Amount__c</fullName>
    <label>Minimum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Minimum amount that must be allocated to this category.</description>
    <inlineHelpText>Minimum total this category must reach across all periods. The grid flags the category while it is under. Leave 0 for no minimum.</inlineHelpText>
</CustomField>