unpackaged/config/npc/objects/BudgetCategory/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency</fullName>
                <default>true</default>
                <label>Currency</label>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Value mode for this category in the Universal Budget grid: Currency (default) tracks money via the Amount field; Quantity tracks counts via the Quantity field; Percent tracks percentages via the Percent field with a hard 100% cap per row. Modes mix freely within one budget.</description>
    <inlineHelpText>How this category's values behave: Currency (money), Quantity (counts), or Percent (0-100, capped at 100% per row across periods).</inlineHelpText>
</CustomField>