unpackaged/config/npc/objects/BudgetCategory/fields/Not_Fundable__c.field-meta.xml
<CustomField>
    <fullName>Not_Fundable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Fundable</label>
    <type>Checkbox</type>
    <description>Check on the categories the funder does not pay (Other Funding Sources, matching funds, in-kind). Mapped as the Category Not Fundable Field in the Universal Budget configuration. Checked categories appear in budget authoring only, so the project budget is complete; they are never shown in the reporting component and are excluded from every disbursement amount the grid derives. Leave unchecked on ordinary categories.</description>
    <inlineHelpText>Check for costs covered by someone else, such as matching funds or another grant. They count towards your total project budget but are not claimed from this award.</inlineHelpText>
</CustomField>