unpackaged/config/npc/objects/BudgetCategory/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Start of the window during which this category is valid; periods outside the range are excluded.</description>
    <inlineHelpText>Date this category becomes active. Amounts in periods before this date are locked as not available.</inlineHelpText>
</CustomField>